--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.7"
   },
   "devDependencies": {
